--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,66 +1,60 @@
-.profileContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    scroll-snap-align: start;
-  }
-  
-  .profileCard {
-    border: 2px solid #303030;
-    border-radius: 8px;
-    width: 320px;
-    overflow: hidden;
-  }
-  
-  .profileInfo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-  }
-  
-  .image {
-    border-radius: 50%;
-    background-color: #303030;
-    max-width: 128px;
-  }
-  
-  .profileName {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 2.4;
-  }
-  
-  .profileTag,
-  .profileLocation {
-    font-size: 18px;
-    color: #6a6a6a;
-  }
-  
-  .statsList {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #d5d5d5;
-    border-top: 2px solid #8a8a8a;
-  }
-  
-  .statsItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
-    width: calc((100%) / 3);
-    font-size: 18px;
-  }
-  
-  .statsItem:not(:last-child) {
-    border-right: 2px solid #8a8a8a;
-  }
-  
-  .statsNumber {
-    font-weight: 700;
-  }
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  border: 4px solid black;
+  border-radius: 16px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.titleBlock {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  padding: 24px;
+}
+
+.userPhoto {
+  width: 250px;
+  background-color: rgb(46, 42, 42);
+  border-radius: 50%;
+}
+
+.userName {
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.userInfo {
+  font-size: 36px;
+  font-weight: 500;
+  color: gray;
+}
+
+.userStatsList {
+  display: flex;
+  width: 100%;
+  border-top: 4px solid gray;
+  background-color: lightgray;
+}
+
+.userStatsList > *:not(:last-child) {
+  border-right: 4px solid gray;
+}
+
+.userStatsItem {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  padding: 16px;
+  font-size: 24px;
+}
+
+.userStatsValue {
+  font-weight: 700;
+}
