--- a/src/components/TransactionHistory/TransactionHistory.css
+++ b/src/components/TransactionHistory/TransactionHistory.css
@@ -1,29 +1,25 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    scroll-snap-align: start;
-  }
-  
-  .table {
-    border-collapse: collapse;
-    border: 1px solid black;
-  }
-  
-  .tableHead {
-    background-color: #303030;
-    color: azure;
-  }
-  
-  .tableHeadRow {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-  
-  .tableHeadElement {
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 32px;
-    padding-right: 32px;
-  }
+.table {
+  width: 600px;
+  margin: 0 auto;
+  font-size: 24px;
+  border-collapse: collapse;
+}
+
+.head {
+  color: white;
+  background-color: rgb(46, 46, 46);
+}
+
+.headItem,
+.bodyItem {
+  border: 2px solid black;
+  padding: 8px;
+}
+
+.transaction {
+  text-transform: capitalize;
+}
+
+.transaction:nth-child(even) {
+  background-color: rgb(200, 200, 200);
+}
