--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,20 +1,16 @@
-.friendListContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    scroll-snap-align: start;
-  }
-  
-  .friendList {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-  }
-  
-  .friendCard {
-    border: 2px solid #303030;
-    border-radius: 8px;
-    padding: 12px;
-  }
+.friendsList {
+  display: flex;
+  width: 600px;
+  margin: 24px auto;
+  gap: 16px;
+}
+
+.friendCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+  border: 2px solid black;
+  border-radius: 8px;
+  width: calc((100% - 64px) / 5);
+}
